--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 [dependencies]
 num-traits = "0.2.19"
 regex = "1.10.5"
+tokio = { version = "1.38", features = ["full"] }
+codec = { package = "parity-scale-codec", version = "3.6.1", features = ['derive'] }
+
 sp-runtime = "38.0.0"
 sp-std = "14.0.0"
-substrate-fixed = { git = "https://github.com/encointer/substrate-fixed.git", tag = "v0.5.9" }
+substrate-fixed = "0.5.9"
+substrate-api-client = "0.18.0"
+
