--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+log = "0.4.22"
+env_logger = "0.11.3"
 num-traits = "0.2.19"
 regex = "1.10.5"
 tokio = { version = "1.38", features = ["full"] }
 codec = { package = "parity-scale-codec", version = "3.6.1", features = ['derive'] }
 
-sp-runtime = "38.0.0"
+sp-runtime = "39.0.0"
 sp-std = "14.0.0"
 substrate-fixed = "0.5.9"
 substrate-api-client = "0.18.0"
